# Bullcast

./: .dockerignore  .env.example  .gitignore  .vercelignore  BULLCAST_BACKEND_FIX_PROMPT.md  CLAUDE_CODE_PROMPT.md  CLAUDE_CODE_PROMPT_2.md  FFLC_BACKTEST_BUILD_PROMPT.md  FRONTEND_HANDOFF.md  Makefile  PROMPT_BACKEND_PHASE2.md  PROMPT_FRONTEND_PHASE2.md  README.md  pyproject.toml  requirements.txt  scratch.py  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  BULLCAST_REBUILD_BRIEF.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: Dockerfile  news_api.py  requirements.txt  sentiment_api.py  server.py  strategy_lab.py
backend/backtesting/: engine.py  metrics.py  signals.py  strategies.py
backend/data/: alerts_log.json
docs/: QA_CHECKLIST.md
tests/: test_api_endpoints.py  test_backtesting_metrics.py  test_circuit_breaker.py  test_features_lookahead.py  test_features_pipeline.py  test_fingerprint.py  test_frontend_save_validation.py  test_generated_journal_comparison.py  test_journal_copilot.py  test_journal_persistence_guards.py  test_journal_summary.py  test_kelly_sizer.py  test_mistake_summary.py  test_pattern_alert_converter.py  test_rate_limiter.py  test_replay_e2e.py  test_smart_import.py  test_strategy_lab.py  test_strategy_validator.py  test_trade_entry_parser.py  test_trader_training.py
trading-ui/: .env.example  .gitignore  .vercelignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
(+100 files in other folders)
