[project]
name = "bullcast-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "python-multipart==0.0.9",
  "numpy>=1.23",
  "pandas>=2.0",
  "feedparser>=6.0.10",
  "requests==2.31.0",
  "vaderSentiment",
  "yfinance",
  "anthropic==0.25.0",
  "google-genai>=1.0.0",
]

[project.scripts]
app = "backend.server:app"
